Fix site-wide footer placement/z-index issue

--- a/app/assets/stylesheets/components/footer.scss
+++ b/app/assets/stylesheets/components/footer.scss
@@ -9,6 +9,7 @@
     // background: #A9BBBA;
     background: white;
     border-top: $sienna-border;
+    z-index: 40;
 }
 
 .footer-container-inner{
