--- a/app/assets/stylesheets/components/photos.scss
+++ b/app/assets/stylesheets/components/photos.scss
@@ -140,6 +140,7 @@
     min-height: 400px;
     padding: 0 40px 0 40px;
     box-sizing: border-box;
+    margin-bottom: 100px;
 }
 
 .show-page{
