--- a/app/assets/stylesheets/components/profile_page.scss
+++ b/app/assets/stylesheets/components/profile_page.scss
@@ -69,7 +69,7 @@
     box-sizing: border-box;
     overflow: hidden;
     height: auto;
-
+    margin-bottom: 100px;
 }
 
 .profile-thumbnail{
