--- a/app/assets/stylesheets/components/settings.scss
+++ b/app/assets/stylesheets/components/settings.scss
@@ -12,6 +12,7 @@
     top: 150px;
     height: auto;
     background: transparent;
+    margin-bottom: 120px;
 }
 
 .user-update-form{
