--- a/app/assets/stylesheets/components/splash.scss
+++ b/app/assets/stylesheets/components/splash.scss
@@ -163,6 +163,10 @@
     position: static;
 }
 
+.photos-index-2{
+    margin-bottom: 100px;
+}
+
 .index-items-list-items-2{
     flex: 1 2 400px;
     padding: 32px;
